--- a/ticket-service/src/main/resources/bootstrap.properties
+++ b/ticket-service/src/main/resources/bootstrap.properties
@@ -1,5 +1,5 @@
 
-spring.application.name=csrservice
+spring.application.name=ticket-service
 spring.cloud.config.uri=${CONFIG_SERVER_URL}
 management.security.enabled=false
 
