--- a/csr-angular/pom.xml
+++ b/csr-angular/pom.xml
@@ -26,6 +26,12 @@
       <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
     </dependency>
 
+   <dependency>
+     <groupId>org.springframework.cloud</groupId>
+     <artifactId>spring-cloud-config-client</artifactId>
+     <version>2.1.4.RELEASE</version>
+   </dependency>
+
     <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
