messaging architecture auto queue generation through command line runner completed

--- a/csr-service/src/main/resources/application.properties
+++ b/csr-service/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 # spring.data.mongodb.uri=mongodb://mongo:27017/helpdesk
 # #spring.data.mongodb.uri=mongodb://localhost:27017/helpdesk
 
- server.port=8182
+# server.port=8182
 
 # #for docker
 # #eureka.client.serviceUrl.defaultZone=http://eureka-naming-server:8761/eureka
