--- a/socketserver/pom.xml
+++ b/socketserver/pom.xml
@@ -87,6 +87,10 @@
       <groupId>redis.clients</groupId>
       <artifactId>jedis</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-amqp</artifactId>
+    </dependency>
     <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-redis -->
 <!--    <dependency>-->
 <!--      <groupId>org.springframework.boot</groupId>-->
