--- a/csr-angular/frontend/csr-ui/package.json
+++ b/csr-angular/frontend/csr-ui/package.json
@@ -30,6 +30,7 @@
     "moment": "^2.24.0",
     "my-command-library": "0.0.14",
     "ng2-charts": "^2.3.0",
+    "ngx-cookie-service": "^2.2.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
