--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,8 @@ services:
       - $HOME/workspace/productdb/helpdesk:/data/uask-mongo
   ##   redis
   redis:
-    image: redis:latest
-    container_name: suggestionsdb
+    image: redis:4.0.9
+    container_name: redis
     ports:
       - 6379:6379
     volumes:
