--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,9 @@ services:
   redis:
     image: redis:4.0.9
     container_name: redis
-    ports:
-      - 6379:6379
+    command: ["redis-server", "--bind", "redis", "--port", "6379"]
+#    ports:
+#      - 6379:6379
     volumes:
       - ../data/redis:/data
     environment:
