redis in docker-compose file refactored

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,11 +23,10 @@ services:
       - $HOME/workspace/productdb/helpdesk:/data/uask-mongo
   ##   redis
   redis:
-    image: redis:4.0.9
+    image: bitnami/redis:4.0.9
     container_name: redis
-    command: ["redis-server", "--bind", "redis", "--port", "6379"]
-#    ports:
-#      - 6379:6379
+    ports:
+      - 6379:6379
     volumes:
       - ../data/redis:/data
     environment:
