--- a/csr-angular/frontend/csr-ui/package.json
+++ b/csr-angular/frontend/csr-ui/package.json
@@ -29,9 +29,13 @@
     "firebase": "^7.2.2",
     "moment": "^2.24.0",
     "my-command-library": "0.0.14",
+    "net": "^1.0.2",
     "ng2-charts": "^2.3.0",
     "ngx-cookie-service": "^2.2.0",
+    "ngx-toastr": "^11.1.2",
     "rxjs": "~6.4.0",
+    "sockjs-client": "^1.4.0",
+    "stompjs": "^2.3.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
