--- a/csr-service/pom.xml
+++ b/csr-service/pom.xml
@@ -74,8 +74,15 @@
 <!--            <scope>test</scope>-->
 <!--        </dependency>-->
         <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>2.0.3.RELEASE</version>
+        </dependency>
+        <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
+            <version>2.9.0</version>
+            <type>jar</type>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-redis -->
         <dependency>
