csr service publisher refactored

--- a/csr-service/pom.xml
+++ b/csr-service/pom.xml
@@ -14,8 +14,7 @@
     <name>csr-service</name>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>11</java.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <spring-cloud.version>Greenwich.SR3</spring-cloud.version>
