--- a/command-registry-angular/frontend/command-registry-ui/package.json
+++ b/command-registry-angular/frontend/command-registry-ui/package.json
@@ -23,7 +23,7 @@
     "@angular/platform-browser-dynamic": "~8.2.10",
     "@angular/router": "~8.2.10",
     "d3": "^5.12.0",
-    "my-command-library": "0.0.13",
+    "my-command-library": "^1.0.1",
     "ngx-pagination": "^4.1.0",
     "rxjs": "~6.5.3",
     "tslib": "^1.10.0",
