--- a/csr-angular/frontend/csr-ui/angular.json
+++ b/csr-angular/frontend/csr-ui/angular.json
@@ -14,7 +14,7 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist",
-            "deployUrl": "csr-angular/",
+            "deployUrl": "csrservice/",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
