--- a/command-registry-angular/frontend/command-registry-ui/package.json
+++ b/command-registry-angular/frontend/command-registry-ui/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~8.2.10",
     "@angular/compiler": "~8.2.10",
     "@angular/core": "~8.2.10",
+    "@angular/fire": "^5.2.1",
     "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/forms": "~8.2.10",
     "@angular/material": "^8.2.1",
@@ -23,7 +24,9 @@
     "@angular/platform-browser-dynamic": "~8.2.10",
     "@angular/router": "~8.2.10",
     "d3": "^5.12.0",
+    "firebase": "^7.2.3",
     "my-command-library": "^1.0.1",
+    "ngx-cookie-service": "^2.2.0",
     "ngx-pagination": "^4.1.0",
     "rxjs": "~6.5.3",
     "tslib": "^1.10.0",
