--- a/bot-watson/pom.xml
+++ b/bot-watson/pom.xml
@@ -39,6 +39,11 @@
       <version>7.4.0</version>
     </dependency>
     <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.5</version>
+    </dependency>
+    <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <optional>true</optional>
